Eliminate usage of Guava